# AI-quiz-generation

./: .example.env  .gitignore  AI_quiz_generation.ipynb  README.md  config.yml  ingest.py  llm.py  main.py  pyproject.toml  requirements.txt  service.py  streamlit-run.py  utils.py  vectordb.py
backend/: main.py
frontend/: app.py
llm/: llm.py  prompts.py
vectorstore/db_faiss/: index.pkl
